--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -89,7 +89,7 @@
 			
 			<div class="info">
 				<span class="search-list-subject important">주소</span>
-				<input type="text" id="address_kakao" name="manager_addr" class="gray-text pointer-cursor" />
+				<input type="text" id="address_kakao" name="manager_addr" class="gray-text pointer-cursor" readonly />
 			</div>
 			<div class="info">
 				<span class="search-list-subject important">상세주소</span>
