--- a/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
+++ b/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
@@ -19,17 +19,21 @@
 			<div class="order-items-box">
 				<div class="box-title-wrapper">
 					<div class="box-title">
-						<h3>배송</h3>
-						<!-- 주문 상태가 취소 완료일 때 "취소된 주문" 표시 -->
-	        			<span th:if="${orderDetails.order_detail_status == '취소완료'}" class="canceled-label">- 취소된 주문</span>
+						<span class="order-delivery-status" 
+      						th:text="${orderDetails.order_detail_status == '취소완료' ? '취소된 주문' : orderDetails.order_delivery_status}"></span>
 					</div>
 					
-					<!-- 배송전일때만 보이는 (주문)취소버튼 -->
-				    <button id="cancelButton" class="default-btn border return-cancel-btn" 
+					<!-- 배송 상태에 따라 취소/반품 버튼 -->
+				    <button id="cancelButton" class="default-btn border cancel-btn" 
 				        th:if="${orderDetails.order_delivery_status == '배송전' && orderDetails.order_detail_status == '주문완료'}" 
 				        th:data-order-num="${orderDetails.order_num}" 
-				        onclick="location.href='/' + 'user/mypage/cancleList?orderNum=' + this.dataset.orderNum">취소
-				    </button>
+				        onclick="location.href='/' + 'user/mypage/cancleList?orderNum=' + this.dataset.orderNum">취소</button>
+				    
+				    <button id="returnButton" class="default-btn border return-btn" 
+						th:if="${(orderDetails.order_delivery_status == '배송중' || orderDetails.order_delivery_status == '배송완료')
+							&& (orderDetails.order_detail_status != '반품요청' && orderDetails.order_detail_status != '반품완료')}"
+						th:data-order-num="${orderDetails.order_num}"
+				        onclick="location.href='/' + 'user/mypage/returnRequest?orderNum=' + this.dataset.orderNum">반품</button>
 				    
 				    <!-- 주문 상태가 취소 요청 또는 취소 완료일 때 취소상세 버튼-->
 				    <button id="cancelDetailButton" class="small-btn detail" 
@@ -41,29 +45,29 @@
 				    </button>
 				</div>
 				
-				<div class="order-items" th:each="detail : ${orderDetails}">
-					<img class="book-thumbnail" th:src="'/images/books/' + ${detail.book_thumbnail_changed != null ? detail.book_thumbnail_changed : 'noimg.png'}" alt="책 이미지">
+				<div class="order-items" th:each="item : ${detailList}">
+					<img class="book-thumbnail" th:src="${item.book_thumbnail_changed != null ? '/images/books/' + item.book_thumbnail_changed : '/images/books/noimg.png'}" alt="책 이미지">
 					<div class="book-info">
 						<div class="book-name-qty">
-							<span class="book-name" th:text="${detail.book_name}"></span> <span class="purchase-qty" th:text="'수량: ' + ${detail.order_detail_qty} + '개'"></span>
+							<span class="book-name" th:text="${item.book_name}"></span> 
+							<span class="purchase-qty" th:text="'수량: ' + ${item.order_detail_qty} + '개'"></span>
 						</div>
 						<div class="order-price-status">
-							<span class="order-price" th:text="${#numbers.formatInteger(detail.order_detail_price * detail.order_detail_qty, 0, 'COMMA')} + '원'"></span> 
+							<div class="price-wrap">
+								<span class="order-price" th:text="${#numbers.formatInteger(item.order_detail_price * item.order_detail_qty, 0, 'COMMA')}"></span> 
+								<span>원</span>
+							</div>
+							<div class="order-status-wrap">
+	                            <span class="order-status" th:text="${item.order_detail_status}"></span>
+	                            <button id="cancelReturnButton" class="default-btn border return-cancel-btn" th:if="${item.order_detail_status == '반품요청'}">반품취소</button>
+	                            <button id="returnDetailButton" class="small-btn detail" th:if="${item.order_detail_status == '반품완료'}"
+	        						th:data-order-num="${orderDetails.order_num}"
+								    onclick="location.href='/' + 'user/mypage/cancleCompletion?orderNum=' + this.dataset.orderNum">반품상세
+	        						<i class="fa-solid fa-angle-right"></i>
+	        					</button>							
 							
-							<!-- 주문 상태가 취소 요청 또는 취소 완료일 때 -->
-                            <span class="order-status" th:if="${orderDetails.order_detail_status == '취소요청' || orderDetails.order_detail_status == '취소완료'}" 
-                                  th:text="${orderDetails.order_detail_status}"></span>
-
-                            <!-- 배송 상태가 보이지 않도록 조건 추가 -->
-                            <span class="order-status" th:if="${orderDetails.order_detail_status != '취소요청' && orderDetails.order_detail_status != '취소완료'}" 
-                                  th:text="${orderDetails.order_delivery_status}"></span>
 							
-							<button id="returnButton" class="default-btn border return-cancel-btn" 
-								th:if="${orderDetails.order_delivery_status == '배송중' || orderDetails.order_delivery_status == '배송완료'}"
-								th:data-order-num="${orderDetails.order_num}"
-						        onclick="location.href='/' + 'user/mypage/returnRequest?orderNum=' + this.dataset.orderNum">반품</button>
-    						<button id="cancelReturnButton" class="default-btn border return-cancel-btn" 
-        						th:if="${orderDetails.order_detail_status == '반품요청'}">반품 취소</button>
+							</div>
 						
 						</div>
 					</div>
