--- a/src/main/resources/templates/admin/inventory_log/inventoryLogList.html
+++ b/src/main/resources/templates/admin/inventory_log/inventoryLogList.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 	<link rel="stylesheet" href="/admin/inventory_log/css/list.css">
 	
-    <!-- Bulma CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
-    
+<!--    &lt;!&ndash; Bulma CSS &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">-->
+<!--    -->
 	<div class="filter-container white-frame">
 		<div class="header">
 			<h1 class="search-list-title">발주내역</h1>
