Fix: 관리자페이지의 창고 및 상품 관리 오류 수정

--- a/src/main/resources/templates/admin/inquiries/inquiries.html
+++ b/src/main/resources/templates/admin/inquiries/inquiries.html
@@ -63,19 +63,18 @@
 	    <div class="filter-info">
 	        <p class="search-list-subject">검색어</p>		
 	        <div class="filter-wrap search-bar">
-		            
 				<div class="select-wrap">
-					<select id="searchColumn" class="select disabled">
+					<select id="searchColumn" class="select">
 						<option value="3">회원ID</option>
 					</select>
 					<div class="select-arrow-down"></div>
 				</div>
 				<div class="search-container">
-                <input type="text" id="searchKeyword" class="search-input" placeholder="검색할 내용 입력"/>
-                <button id="searchButton">
-                    <span class="material-symbols-outlined">search</span>
-                </button>
-            </div>
+		               <input type="text" id="searchKeyword" class="search-input" placeholder="검색할 내용 입력"/>
+		               <button id="searchButton">
+		                   <span class="material-symbols-outlined">search</span>
+		               </button>
+	            </div>
 				<button id="reset-button" onclick="resetFilters()">초기화</button>			
 			</div>
 		</div>
