--- a/src/main/resources/templates/admin/myinfo/myinfo.html
+++ b/src/main/resources/templates/admin/myinfo/myinfo.html
@@ -29,14 +29,14 @@
 
             <!-- 비밀번호 필드 -->
             <div class="info">
-                <span class="search-list-subject important">비밀번호</span>
+                <span class="search-list-subject">비밀번호</span>
                 <div>
                     <input type="password" id="input-pw" class="input-pw" placeholder="새 비밀번호 입력">
                 </div>
             </div>
 
             <div class="info">
-                <span class="search-list-subject important">비밀번호 확인</span>
+                <span class="search-list-subject">비밀번호 확인</span>
                 <div>
                     <input type="password" id="input-pw-check" class="input-pw" th:field="*{manager_pw}" placeholder="새 비밀번호 확인">
                 </div>
