--- a/src/main/resources/templates/admin/notice/noticeDetails.html
+++ b/src/main/resources/templates/admin/notice/noticeDetails.html
@@ -16,7 +16,7 @@
 		<h1 class="search-list-title">공지글 수정</h1>
 			<input type="hidden" id="notice_num" name="notice_num" th:value="${notice.notice_num}" />
 			<div class="info">
-				<span class="search-list-subject">제목</span>
+				<span class="search-list-subject important">제목</span>
 				<div>
 					<input id="notice-title" name="notice_title" type="text" placeholder="제목을 입력하세요" th:value="${notice.notice_title}" />
 				</div>
