--- a/src/main/resources/templates/admin/notice/noticeReg.html
+++ b/src/main/resources/templates/admin/notice/noticeReg.html
@@ -13,7 +13,7 @@
 		<h1 class="search-list-title">공지글 등록</h1>
 		
 			<div class="info">
-				<span class="search-list-subject">제목</span>
+				<span class="search-list-subject important">제목</span>
 				<div>
 					<input id="notice-title" type="text" placeholder="제목을 입력하세요">
 				</div>
