--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>BOOKSTORE 로그인</title>
 <link rel="shortcut icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon"><link rel="stylesheet" href="/user/common/css/common.css" />
+<link rel="stylesheet" href="/admin/common/css/modal.css" />
 <link rel="stylesheet" href="/user/login/css/login.css" />
 <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   
@@ -62,6 +63,7 @@
 	    </form>
 	</div>     
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>	 
+	<script src="/user/common/js/main.js"></script>	
 	
 	<script src="/user/login/js/login.js"></script>    
 </body>
