Fix: 관리자 페이지 내정보 스크립트 에러 및 내정보 수정 후 세션 미적용 에러 수정

--- a/src/main/resources/templates/admin/myinfo/myinfo.html
+++ b/src/main/resources/templates/admin/myinfo/myinfo.html
@@ -103,7 +103,7 @@
             <div class="info">
                 <span class="search-list-subject">주소</span>
                 <div>
-                    <input type="text" id="address_kakao" th:field="*{manager_addr}" class="gray-text"/>
+                    <input type="text" id="address_kakao" th:field="*{manager_addr}" class="gray-text" readonly/>
                 </div>
             </div>
 
