--- a/src/main/resources/static/mobile/common/css/sample.css
+++ b/src/main/resources/static/mobile/common/css/sample.css
@@ -1,3 +1,48 @@
+body, html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #F5F5F5;
+}
+
+.footer-wrap {
+	position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+.mobile-inner {
+	display: flex;
+    flex-direction: column;
+}
+
+.mobile-frame {
+	position: relative;
+	width: 360px;
+	height: 670px;
+	padding: 15px;
+	background-color: #FFFFFF;
+}
+
+.scroll {
+	overflow: auto;
+}
+
+.content-list {
+	height: 40px;
+    display: flex;
+    margin-top: 20px;
+    border-bottom: 1px solid #D8D8D8;
+    align-items: center;
+}
+.content-text-wrap {
+	display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 /* 로그인 */
 #login-container {
     width: 100%;
