--- a/src/main/resources/templates/mobile/home/home.html
+++ b/src/main/resources/templates/mobile/home/home.html
@@ -35,7 +35,7 @@
 		<p class="sub-title">배송요청</p>
 		<div class="content-list" th:each="item : ${list}">
 			<div class="content-text-wrap">
-				<p class="content-text">요청번호: <span th:text="${item.request_num}"></span></p>
+				<a class="content-text" th:href="@{/mobile/delivery-detail(orderNum=${item.order_num})}">요청번호: <span th:text="${item.request_num}"></span></a>
 				<p class="content-sub-txt">요청날짜: <span th:text="${#dates.format(item.request_date, 'yyyy-MM-dd')}"></span></p>
 			</div>
 			<div style="text-align: end;">
