Fix: 사용자 페이지 주문 상세 및 결제 페이지 잘못된 정보 표기 수정

--- a/src/main/resources/templates/user/main/customer_order/payment.html
+++ b/src/main/resources/templates/user/main/customer_order/payment.html
@@ -163,7 +163,7 @@
                             <p>개</p>
                         </div>
                         <div class="book-price">
-                            <p th:text="${#numbers.formatInteger(item.book_price, 0, 'COMMA')}"></p>
+                            <p th:text="${#numbers.formatInteger(item.book_price * item.cart_purchase_qty, 0, 'COMMA')}"></p>
                             <input type="hidden" name="order_detail_price" class="order_detail_price" th:value="${item.book_price}">
                             <p>원</p>
                         </div>
